--- a/TraversalProject/Views/Shared/_UILayout.cshtml
+++ b/TraversalProject/Views/Shared/_UILayout.cshtml
@@ -3,16 +3,21 @@
     Layout = null;
 }
 
-<!DOCTYPE html>
+<!doctype html>
+<html lang="zxx">
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>_UILayout</title>
-</head>
+@await Html.PartialAsync("/Views/LayoutPartial/_HeaderPartial.cshtml")
+
 <body>
-    <div class="container">
-        @RenderBody()
-    </div>
+
+    @await Html.PartialAsync("/Views/LayoutPartial/_NavbarPartial.cshtml")
+
+    @RenderBody()
+
+    @await Html.PartialAsync("/Views/LayoutPartial/_FooterPartial.cshtml")
+
+    @await Html.PartialAsync("/Views/LayoutPartial/_ScriptsPartial.cshtml")
+      
 </body>
+
 </html>
