--- a/TraversalProject/Views/LayoutPartial/_HeaderPartial.cshtml
+++ b/TraversalProject/Views/LayoutPartial/_HeaderPartial.cshtml
@@ -2,7 +2,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Traversal Reservation</title>
+    <title>Traversal Travel Category Bootstrap Responsive Template | About </title>
     <!-- icon -->
     <link rel="icon" type="image/png" href="/lib/icons/home.png" />
     <!-- google fonts -->
@@ -11,6 +11,6 @@
           rel="stylesheet">
     <!-- google fonts -->
     <!-- Template CSS -->
-    <link rel="stylesheet" href="~/TraversalTheme/assets/css/style-starter.css">
+    <link rel="stylesheet" href="~/Traversal-Liberty/assets/css/style-liberty.css">
     <!-- Template CSS -->
 </head>
