--- a/TraversalProject/Views/Destination/Index.cshtml
+++ b/TraversalProject/Views/Destination/Index.cshtml
@@ -27,7 +27,7 @@
                     {
                         <div class="col-lg-4 col-md-4 col-6">
                             <div class="column">
-                                <a href="blog-single.html"><img src="@item.Image" alt="" class="img-fluid"></a>
+                                <a href="/Destination/DestinationDetails/@item.DestinationID"><img src="@item.Image" alt="" class="img-fluid"></a>
                                 <div class="info">
                                     <h4><a href="blog-single.html">@item.City</a></h4>
                                     <p>@item.DayNight</p>
@@ -43,4 +43,6 @@
             </div>
         </div>
     </section>
+    <link rel="stylesheet" href="~/Traversal-Liberty/assets/css/style-liberty.css" />
+    <script src="~/Traversal-Liberty/assets/js/bootstrap.min.js"></script>
 </body>
