--- a/TraversalProject/Views/LayoutPartial/_ScriptsPartial.cshtml
+++ b/TraversalProject/Views/LayoutPartial/_ScriptsPartial.cshtml
@@ -1,41 +1,9 @@
-﻿<script src="~/TraversalTheme/assets/js/jquery-3.3.1.min.js"></script>
-<script src="~/TraversalTheme/assets/js/theme-change.js"></script>
-<!--/slider-js-->
-<script src="~/TraversalTheme/assets/js/jquery.min.js"></script>
-<script src="~/TraversalTheme/assets/js/modernizr-2.6.2.min.js"></script>
-<script src="~/TraversalTheme/assets/js/jquery.zoomslider.min.js"></script>
-<!--//slider-js-->
-<script src="~/TraversalTheme/assets/js/owl.carousel.js"></script>
-<!-- script for tesimonials carousel slider -->
-<script>
-    $(document).ready(function () {
-        $("#owl-demo1").owlCarousel({
-            loop: true,
-            margin: 20,
-            nav: false,
-            responsiveClass: true,
-            responsive: {
-                0: {
-                    items: 1,
-                    nav: false
-                },
-                736: {
-                    items: 1,
-                    nav: false
-                },
-                1000: {
-                    items: 1,
-                    nav: false,
-                    loop: true
-                }
-            }
-        })
-    })
-</script>
-<!-- //script for tesimonials carousel slider -->
+﻿<!-- Template JavaScript -->
+<script src="~/Traversal-Liberty/assets/js/jquery-3.3.1.min.js"></script>
+<script src="~/Traversal-Liberty/assets/js/theme-change.js"></script>
 <!-- stats number counter-->
-<script src="~/TraversalTheme/assets/js/jquery.waypoints.min.js"></script>
-<script src="~/TraversalTheme/assets/js/jquery.countup.js"></script>
+<script src="~/Traversal-Liberty/assets/js/jquery.waypoints.min.js"></script>
+<script src="~/Traversal-Liberty/assets/js/jquery.countup.js"></script>
 <script>
     $('.counter').countUp();
 </script>
@@ -69,4 +37,4 @@
 </script>
 <!--//MENU-JS-->
 
-<script src="~/TraversalTheme/assets/js/bootstrap.min.js"></script>
+<script src="~/Traversal-Liberty/assets/js/bootstrap.min.js"></script>
