--- a/TraversalProject/Views/Destination/DestinationDetails.cshtml
+++ b/TraversalProject/Views/Destination/DestinationDetails.cshtml
@@ -149,9 +149,9 @@
                         </div>
                     </div>
                     <!--//author-card-->
-                    @await Component.InvokeAsync("_CommentList")
+                    @await Component.InvokeAsync("_CommentList",new{id=ViewBag.ID})  <!-- Belirtilen rotaya ait yorumlar gelmesi için id gönderiyoruz -->
 
-                    @await Component.InvokeAsync("_AddComment")
+                    @await Html.PartialAsync("~/Views/Comment/AddComment.cshtml")
    
                 </div>
             </div>
