Custom Identity Validator (Şifre gereklilikleri) yapıldı - 31

--- a/TraversalProject/Views/Login/SignUp.cshtml
+++ b/TraversalProject/Views/Login/SignUp.cshtml
@@ -93,6 +93,10 @@ Author URL: http://w3layouts.com
                             <input type="password" asp-for="ConfirmPassword"  />
                             <span asp-validation-for="ConfirmPassword" class="text-danger" style="color:  #ff0000;"></span>
                         </div>
+                        <div style="color: #ff0000;" asp-validation-summary="ModelOnly">
+                            <!-- Girilen şifrenin nasıl olması gerektiği mesajını gösterir -->
+
+                        </div>
 
                         <label class="container">
                             Şartları okudum <a href="#">Kabul ediyorum</a>
