Kullanıcı bilgileri güncelleme - 36

--- a/TraversalProject/Areas/Member/Views/Destination/Index.cshtml
+++ b/TraversalProject/Areas/Member/Views/Destination/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using EntityLayer.Concrete;
-@model List<Destination>
+﻿@model List<Destination>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
