--- a/TraversalProject/Areas/Member/Views/Reservation/MyApprovalReservation.cshtml
+++ b/TraversalProject/Areas/Member/Views/Reservation/MyApprovalReservation.cshtml
@@ -5,10 +5,11 @@
 }
 
 <h1>Onay Bekleyen Rezervasyonlar</h1>
+<br />
 
 <table class="table table-bordered">
     <tr>
-        <th>#</th>
+        <th hidden>#</th>
         <th>Lokasyon</th>
         <th>Kişi Sayısı</th>
         <th>Rezervasyon Tarihi</th>
@@ -17,8 +18,8 @@
     @foreach(var item in Model)
     {
       <tr>
-          <td>@item.ReservationID</td>
-          <td>@item.Destination</td>
+          <td hidden>@item.ReservationID</td>
+          <td>@item.Destination.City</td> <!-- Reservation tablosuna Destination'u include ettiğimiz için bu şekilde ulaşabildik -->
           <td>@item.PersonCount</td>
           <td>@item.ReservationDate</td>
           <td>@item.Status</td>
