--- a/TraversalProject/Areas/Member/Views/Reservation/MyOldReservation.cshtml
+++ b/TraversalProject/Areas/Member/Views/Reservation/MyOldReservation.cshtml
@@ -1,8 +1,35 @@
-﻿
+﻿@model List<Reservation>
 @{
     ViewData["Title"] = "MyOldReservation";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
 <h1>Geçmiş Rezervasyonlarım</h1>
+<br />
+@if (@ViewBag.reservationCount == 0)
+{
+    <div class="text-left my-5">Geçmiş rezervasyonunuz bulunmamaktadır.</div>
+}
+else{
+<table class="table table-bordered">
+    <tr>
+        <th hidden>#</th>
+        <th>Lokasyon</th>
+        <th>Kişi Sayısı</th>
+        <th>Rezervasyon Tarihi</th>
+        <th>Durum</th>
+    </tr>
+    @foreach (var item in Model)
+    {
+            <tr>
+                <td hidden>@item.ReservationID</td>
+                <td>@item.Destination.City</td> <!-- Reservation tablosuna Destination'u include ettiğimiz için bu şekilde ulaşabildik -->
+                <td>@item.PersonCount</td>
+                <td>@item.ReservationDate</td>
+                <td>@item.Status</td>
+            </tr>
+    }
+</table>
+}
+
 
