--- a/TraversalProject/Areas/Member/Views/Reservation/NewReservation.cshtml
+++ b/TraversalProject/Areas/Member/Views/Reservation/NewReservation.cshtml
@@ -6,10 +6,10 @@
 
 <h1>Yeni Rezervasyon Sayfası</h1>
 <form method="post">
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.Label("Lokasyon")
         @Html.DropDownListFor(x=>x.Destination,(List<SelectListItem>)ViewBag.destinations, new {@class ="form-control"})
-    </div>
+    </div>*@
 
     <div class="form-group">
         @Html.Label("Kişi Sayısı")
