Admin dashboard, adminde yorumlar sayfası

--- a/TraversalProject/Views/LayoutPartial/_HeaderPartial.cshtml
+++ b/TraversalProject/Views/LayoutPartial/_HeaderPartial.cshtml
@@ -2,7 +2,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Traversal Travel Category Bootstrap Responsive Template | About </title>
+    <title>Traversal Reservation</title>
     <!-- icon -->
     <link rel="icon" type="image/png" href="/lib/icons/home.png" />
     <!-- google fonts -->
