--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -7,7 +7,7 @@
         </a>
     </li>
      <li class="menu-item">
-        <a href="index.html" class="menu-link">
+        <a href="/Admin/Comment/Index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-comment"></i>
             <div data-i18n="Analytics">Yorumlar</div>
         </a>
