Admin Users işlemleri, refactoring

--- a/TraversalProject/Areas/Admin/Views/Destination/Index.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Destination/Index.cshtml
@@ -22,7 +22,7 @@
             <td>@item.City</td>
             <td>@item.Price</td>
             <td>@item.Capacity</td>
-            <td><a href="/Destination/Details/@item.DestinationID" class="btn btn-outline-info">Sitede Gör</a></td>
+            <td><a href="/Destination/DestinationDetails/@item.DestinationID" class="btn btn-outline-info">Sitede Gör</a></td>
             <td><a href="/Admin/Destination/DeleteDestination/@item.DestinationID" class="btn btn-outline-danger">Sil</a></td>
             <td><a href="/Admin/Destination/UpdateDestination/@item.DestinationID" class="btn btn-outline-success">Güncelle</a></td>
         </tr>
