Raporların business'a taşınması, rehber(guide) işlemlerinin tamamlanması

--- a/TraversalProject/Areas/Admin/Views/Guide/Index.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Guide/Index.cshtml
@@ -21,6 +21,7 @@
         <th>Açıklama</th>
         <th>Durum</th>
         <th>Düzenle</th>
+        <th>Sil</th>
     </tr>
     @foreach (var item in Model)
     {
@@ -35,15 +36,16 @@
             @{
                 if (item.Status == true)
                 {
-                    <td><a href="" class="btn btn-outline-warning">Pasif Yap</a></td>
+                    <td><a href="/Admin/Guide/ChangeToFalse/@item.GuideID" class="btn btn-outline-warning">Pasif Yap</a></td>
                 }
                 else
                 {
-                    <td><a href="" class="btn btn-outline-info">Aktif Yap</a></td>
+                    <td><a href="/Admin/Guide/ChangeToTrue/@item.GuideID" class="btn btn-outline-info">Aktif Yap</a></td>
                 }
             }
 
-            <td><a href="#" class="btn btn-outline-success">Düzenle</a></td>
+            <td><a href="/Admin/Guide/EditGuide/@item.GuideID" class="btn btn-outline-success">Düzenle</a></td>
+            <td><a href="/Admin/Guide/DeleteGuide/@item.GuideID" class="btn btn-outline-danger">Sil</a></td>
         </tr>
     }
 </table>
