--- a/TraversalProject/Areas/Admin/Views/Guide/EditGuide.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Guide/EditGuide.cshtml
@@ -1,8 +1,44 @@
-﻿
+﻿@model Guide
 @{
     ViewData["Title"] = "EditGuide";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>EditGuide</h1>
+<h1>Rehber Güncelleme Sayfası</h1>
+<form method="post">
+    @Html.HiddenFor(x=>x.GuideID)
+    <div class="form-group">
+        @Html.Label("Ad Soyad")
+        <input type="text" asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
+    <br />
+
+    <div class="form-group">
+        @Html.Label("Açıklama")
+        <input type="text" asp-for="Description" class="form-control" />
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+    <br />
+    <div class="form-group">
+        @Html.Label("Rehber Fotoğrafı")
+        <input type="text" asp-for="Image" class="form-control" />
+        <span asp-validation-for="Image" class="text-danger"></span>
+    </div>
+    <br />
+    <div class="form-group">
+        @Html.Label("Instagram Url")
+        <input type="text" asp-for="ınstagramUrl" class="form-control" />
+    </div>
+    <br />
+
+    <div class="form-group">
+        @Html.Label("Twitter Url")
+        <input type="text" asp-for="TwitterUrl" class="form-control" />
+    </div>
+    <br />
+
+    <button class="btn btn-outline-primary">Güncelle</button>
+</form>
+
 
