--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -37,6 +37,18 @@
         </a>
     </li>
     <li class="menu-item">
+        <a href="/PdfReport/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bxs-report"></i>
+            <div data-i18n="Analytics">Pdf Raporları</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Excel/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bxs-report"></i>
+            <div data-i18n="Analytics">Excel Raporları</div>
+        </a>
+    </li>
+    <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-ghost"></i>
             <div data-i18n="Analytics">Öne Çıkanlar</div>
