--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -49,6 +49,12 @@
         </a>
     </li>
     <li class="menu-item">
+        <a href="/Admin/Mail/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-mail-send"></i>
+            <div data-i18n="Analytics">Mail Gönder</div>
+        </a>
+    </li>
+    <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-ghost"></i>
             <div data-i18n="Analytics">Öne Çıkanlar</div>
