AJAX işlemleri ile Destination bilgileri - 65

--- a/TraversalProject/Views/Admin/PartialScripts.cshtml
+++ b/TraversalProject/Views/Admin/PartialScripts.cshtml
@@ -12,4 +12,7 @@
 <!-- Page JS -->
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+<!-- sweetalert -->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
