--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -55,6 +55,12 @@
         </a>
     </li>
     <li class="menu-item">
+        <a href="/Admin/City/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bxs-star"></i>
+            <div data-i18n="Analytics">AJAX işlemleri</div>
+        </a>
+    </li>
+    <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-ghost"></i>
             <div data-i18n="Analytics">Öne Çıkanlar</div>
