--- a/TraversalProject/Areas/Admin/Views/Guide/EditGuide.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Guide/EditGuide.cshtml
@@ -28,7 +28,7 @@
     <br />
     <div class="form-group">
         @Html.Label("Instagram Url")
-        <input type="text" asp-for="ınstagramUrl" class="form-control" />
+        <input type="text" asp-for="InstagramUrl" class="form-control" />
     </div>
     <br />
 
