AutoMapper ile admin' de duyuru ekleme,silme,güncelleme - 68

--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -60,6 +60,12 @@
             <div data-i18n="Analytics">AJAX işlemleri</div>
         </a>
     </li>
+     <li class="menu-item">
+        <a href="/Admin/Announcement/Index" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-notification"></i>
+            <div data-i18n="Analytics">Duyurular</div>
+        </a>
+    </li>
     <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-ghost"></i>
