--- a/TraversalProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using TraversalProject
 @using TraversalProject.Models
 @using EntityLayer.Concrete
+@using DTOLayer.DTOs.AnnouncementDTOs
+@using TraversalProject.Areas.Admin.Models
 @using TraversalProject.Areas.Member.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
