Booking'den Otel Listesi çekme(api) - CQRS Design pattern

--- a/TraversalProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,4 +4,6 @@
 @using DTOLayer.DTOs.AnnouncementDTOs
 @using TraversalProject.Areas.Admin.Models
 @using TraversalProject.Areas.Member.Models
+@using TraversalProject.CQRS.Results.DestinationResults
+@using TraversalProject.CQRS.Commands.DestinationCommands
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
