MediatR kütüphanesi ile CQRS yapısı

--- a/TraversalProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -5,5 +5,7 @@
 @using TraversalProject.Areas.Admin.Models
 @using TraversalProject.Areas.Member.Models
 @using TraversalProject.CQRS.Results.DestinationResults
+@using TraversalProject.CQRS.Results.GuideResults
 @using TraversalProject.CQRS.Commands.DestinationCommands
+@using TraversalProject.CQRS.Commands.GuideCommands
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
