Anasayfa tasarımsal düzenlemeler - 78

--- a/TraversalProject/Views/LayoutPartial/_FooterPartial.cshtml
+++ b/TraversalProject/Views/LayoutPartial/_FooterPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<footer>
+﻿﻿<footer>
     <!-- footer -->
     <section class="w3l-footer">
         <div class="w3l-footer-16-main py-5">
@@ -7,33 +7,33 @@
                     <div class="col-lg-6 column">
                         <div class="row">
                             <div class="col-md-4 column">
-                                <h3>Şirketimiz</h3>
+                                <h3>Acentamız</h3>
                                 <ul class="footer-gd-16">
-                                    <li><a href="index.html">Ana Sayfa</a></li>
+                                    <li><a href="/Default/Index/">Ana Sayfa</a></li>
                                     <li><a href="about.html">Hakkımızda</a></li>
-                                    <li><a href="services.html">Hizmetlerimiz</a></li>
-                                    <li><a href="blog.html">Rotalar</a></li>
-                                    <li><a href="contact.html">İletişim</a></li>
+                                    <li><a href="services.html">Hizmetler</a></li>
+                                    <li><a href="blog.html">Blog</a></li>
+                                    <li><a href="contact.html">Bize Yazın</a></li>
                                 </ul>
                             </div>
                             <div class="col-md-4 column mt-md-0 mt-4">
                                 <h3>Faydalı Linkler</h3>
                                 <ul class="footer-gd-16">
-                                    <li><a href="#url">Havayolları</a></li>
-                                    <li><a href="#url">Hastaneler</a></li>
-                                    <li><a href="#url">Döviz Ofisleri</a></li>
-                                    <li><a href="about.html">Turizm Bürosu</a></li>
-                                    <li><a href="#url">Bize Yazın</a></li>
+                                    <li><a href="#url">Rotalar</a></li>
+                                    <li><a href="#url">Tur Rehbeleri</a></li>
+                                    <li><a href="#url">Görseller</a></li>
+                                    <li><a href="about.html">Çalışanlarımız</a></li>
+                                    <li><a href="#url">Paketlerimiz</a></li>
                                 </ul>
                             </div>
                             <div class="col-md-4 column mt-md-0 mt-4">
                                 <h3>Hizmetlerimiz</h3>
                                 <ul class="footer-gd-16">
-                                    <li><a href="#url">Servisler</a></li>
-                                    <li><a href="#url">Ring Seferler</a></li>
-                                    <li><a href="services.html">Rehberlerimiz</a></li>
-                                    <li><a href="landing-single.html">Türkiye Ofisi</a></li>
-                                    <li><a href="#url">Ukrayna Ofisi</a></li>
+                                    <li><a href="#url">Güvenlik</a></li>
+                                    <li><a href="#url">Hizmet Şartları</a></li>
+                                    <li><a href="services.html">Hizmetler</a></li>
+                                    <li><a href="landing-single.html">Üye Girişi</a></li>
+                                    <li><a href="#url">Rehber Girişi</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -41,21 +41,20 @@
                     <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                         <h3>Mail Bülteni </h3>
                         <div class="end-column">
-                            <h4>Son gelişmeler ve kampanyalardan haberdar olun.</h4>
+                            <h4>Kampanya ve indirimler için abone olun.</h4>
                             <form action="#" class="subscribe" method="post">
-                                <input type="email" name="email" placeholder="Email Address" required="">
+                                <input type="email" name="email" placeholder="Mail Adresiniz" required="">
                                 <button type="submit">Abone Ol</button>
                             </form>
-                            <p>Kampanyalar için bültene kaydolun, spam mailler almayacaksınız.</p>
+                            <p>Yeni tur rotalarını paylaşacağız. Spam mail göndermiyoruz.</p>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
                     <div class="columns text-lg-left text-center">
                         <p>
-                            &copy; @DateTime.Now.Year TraversalApp. Tüm hakları saklıdır.Design by <a href="https://w3layouts.com/" target="_blank">
-                                W3Layouts
-                            </a>
+                            &copy; @DateTime.Now.Year Traversal. Tüm hakları saklıdır. Design by <a href="https://w3layouts.com/" target="_blank">W3Layouts</a>
+
                         </p>
                     </div>
                     <div class="columns-2 mt-lg-0 mt-3">
@@ -80,7 +79,6 @@
                 </div>
             </div>
         </div>
-
 
         <!-- move top -->
         <button onclick="topFunction()" id="movetop" title="Go to top">
