--- a/TraversalProject/Views/Shared/Components/_SubAbout/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_SubAbout/Default.cshtml
@@ -11,7 +11,7 @@
                             <p class="mt-3 pr-lg-5">
                                 @item.Description
                             </p>
-                            <a href="about.html" class="btn btn-style btn-secondary mt-5">Daha Fazlası</a>
+                            <a href="#" class="btn btn-style btn-secondary mt-5">Daha Fazlası</a>
                         }
                     </div>
                 </div>
