--- a/TraversalProject/Views/Destination/DestinationDetails.cshtml
+++ b/TraversalProject/Views/Destination/DestinationDetails.cshtml
@@ -21,8 +21,8 @@
     <div class="py-5 w3l-homeblock1 text-center">
         <div class="container mt-md-3">
             <h3 class="blog-desc-big text-center mb-4">
-                Your Blog Posts are Boring? Here are 9 Tips for
-                Making your Writing more Interesting
+                Alanında en yetkin rehberlerimizle
+                en güncel seyahat hikayelerimizi okumalısınız!
             </h3>
             <div class="blog-post-align">
                 <div class="blog-post-img">
@@ -50,105 +50,54 @@
             <div class="container pb-lg-4">
                 <div class="single-post-image">
                     <div class="post-content">
-                        <img src="assets/images/banner2.jpg" class="radius-image img-fluid mb-5" alt="" />
+                        <img src="@Model.CoverImage" style="width:1170px; height:500px;" class="radius-image img-fluid mb-5" alt="" />
                     </div>
                 </div>
                 <div class="single-post-content">
                     <p class="alphabet mb-4">
-                        <span class="big-letter">A</span>@Model.Details1
+                        <span class="big-letter"></span>@Model.Details1
                     </p>
                     <blockquote class="blockquote my-5">
                         <div class="icon-quote"><span class="fa fa-quote-left" aria-hidden="true"></span></div>
                       Gezi Tur Seyahat Rotalar Dünya.
                         <footer class="blockquote-footer mt-3">
-                            Smith lara
+                            Elif Öztürk
                         </footer>
                     </blockquote>
                     <div class="sing-post-thumb mb-5 row pt-3">
                         <div class="col-sm-6">
-                            <a href="#url"><img src="~/Traversal-Liberty/assets/images/g8.jpg" class="img-fluid radius-image" alt=""></a>
+                            <a href="#url"><img src="@Model.Image" style="width:400px; height:400px;" class="img-fluid radius-image" alt=""></a>
                         </div>
                         <div class="col-sm-6 mt-sm-0 mt-3">
-                            <a href="#url"><img src="~/Traversal-Liberty/assets/images/g9.jpg" class="img-fluid radius-image" alt=""></a>
+                            <a href="#url"><img src="@Model.Image2" style="width:400px; height:400px;" class="img-fluid radius-image" alt=""></a>
                         </div>
                     </div>
-                    <h3 class="blog-desc-big m-0 mb-lg-4 mb-3">2. Paragraf</h3>
+                    <h3 class="blog-desc-big m-0 mb-lg-4 mb-3"></h3>
                     <p class="mb-4">
                        @Model.Details2
                     </p>
                     <div class="d-grid left-right mt-5 pb-md-5">
                         <div class="buttons-singles tags">
-                            <h4>Tags :</h4>
-                            <a href="#blog-tag">Travel</a>
-                            <a href="#blog-tag">Culture</a>
-                            <a href="#blog-tag">Hotel</a>
-                            <a href="#blog-tag">Food</a>
+                            <h4>Etiketler :</h4>
+                            <a href="#blog-tag">Seyahat</a>
+                            <a href="#blog-tag">Gezi</a>
+                            <a href="#blog-tag">Otel</a>
+                            <a href="#blog-tag">Tur</a>
+                            <a href="#blog-tag">Dünya</a>
                         </div>
                         <div class="buttons-singles">
-                            <h4>Share :</h4>
+                            <h4>Paylaş :</h4>
                             <a href="#blog-share"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                             <a href="#blog-share"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                             <a href="#blog-share"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
-                            <a href="#blog-share"><span class="fa fa-pinterest-p" aria-hidden=" true"></span></a>
+                            <a href="#blog-share"><span class="fa fa-pinterest-p" aria-hidden="true"></span></a>
                         </div>
                     </div>
 
                     <!--//author-card-->
-                    <div class="author-card mt-5">
-                        <div class="row align-items-center">
-                            <div class="col-sm-3 col-6">
-                                <div>
-                                    <img src="~/Traversal-Liberty/assets/images/c3.jpg" alt="" class="rounded-circle img-fluid">
-                                </div>
-                            </div>
-                            <div class="col-sm-9 mt-sm-0 mt-3">
-                                <h3 class="mb-3 title">Alexander Ronald</h3>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, sed et excepturi.
-                                    Distinctio fugit odit? Fugit ipsam. Lorem ipsum dolor sit.
-                                </p>
-                                <ul class="author-icons mt-4">
-                                    <li>
-                                        <a class="facebook" href="#url">
-                                            <span class="fa fa-facebook"
-                                                  aria-hidden="true"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="twitter" href="#url">
-                                            <span class="fa fa-twitter"
-                                                  aria-hidden="true"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="google" href="#url">
-                                            <span class="fa fa-google-plus"
-                                                  aria-hidden="true"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="linkedin" href="#url">
-                                            <span class="fa fa-linkedin"
-                                                  aria-hidden="true"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="github" href="#url">
-                                            <span class="fa fa-github"
-                                                  aria-hidden="true"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="dribbble" href="#url">
-                                            <span class="fa fa-dribbble"
-                                                  aria-hidden="true"></span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+                    @await Component.InvokeAsync("_GuideDetails")
                     <!--//author-card-->
+
                     @await Component.InvokeAsync("_CommentList",new{id=ViewBag.ID})  <!-- Belirtilen rotaya ait yorumlar gelmesi için id gönderiyoruz -->
 
                     @await Html.PartialAsync("~/Views/Comment/AddComment.cshtml")
