--- a/TraversalProject/Views/Destination/Index.cshtml
+++ b/TraversalProject/Views/Destination/Index.cshtml
@@ -8,10 +8,10 @@
     <section class="w3l-about-breadcrumb text-left">
         <div class="breadcrumb-bg breadcrumb-bg-about py-sm-5 py-4">
             <div class="container">
-                <h2 class="title">Rotalar </h2>
+                <h2 class="title">Ana Sayfa </h2>
                 <ul class="breadcrumbs-custom-path mt-2">
                     <li><a href="/Default/Index/">Ana Sayfa</a></li>
-                    <li class="active"><span class="fa fa-arrow-right mx-2" aria-hidden="true"></span> Destinations </li>
+                    <li class="active"><span class="fa fa-arrow-right mx-2" aria-hidden="true"></span> Tur Rotaları </li>
                 </ul>
             </div>
         </div>
@@ -27,9 +27,10 @@
                     {
                         <div class="col-lg-4 col-md-4 col-6">
                             <div class="column">
-                                <a href="/Destination/DestinationDetails/@item.DestinationID"><img src="@item.Image" alt="" class="img-fluid"></a>
+                                <a href="/Destination/DestinationDetails/@item.DestinationID">
+                                    <img src="@item.Image" alt="" style="width:370px; height:300px" class="img-fluid"></a>
                                 <div class="info">
-                                    <h4><a href="blog-single.html">@item.City</a></h4>
+                                    <h4><a href="/Destination/DestinationDetails/@item.DestinationID">@item.City</a></h4>
                                     <p>@item.DayNight</p>
                                     <div class="dst-btm">
                                         <h6 class="">Başlayan fiyatlar </h6>
