--- a/TraversalProject/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/TraversalProject/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg stroke">
             <h1>
-                <a class="navbar-brand mr-lg-5" href="index.html">
+                <a class="navbar-brand mr-lg-5" href="/Default/Index/">
                     Traversal
                 </a>
             </h1>
@@ -22,17 +22,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Default/Index/">Ana Sayfa <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="about.html">Hakkımızda</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/Destination/Index/">Tur Rotaları</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pricing.html">Rehberlerimiz</a>
+                        <a class="nav-link" href="#">Rehberlerimiz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">İletişim</a>
+                        <a class="nav-link" href="#">İletişim</a>
                     </li>
 
                 </ul>
